# mri-preprocessing

./: .gitignore  README.md  pyproject.toml
bash_scripts/: aws_command.sh  compress_nii.sh  extract_and_nifti_convertion.sh  extract_and_remove.sh  ida_extract.sh  ida_flatten.sh  local_transfert_filter_AABC_parallel.sh  loop_replace_link_by_file.sh  merge_extract_all.sh  move_source_data_to_parent.sh  parallel_extract_and_nifti_convertion.sh  restructure_idadaflatten_dicom.sh  simple_replace_link_by_file.sh  transfert_filter_HCP_YOUNG_2025.sh
csv_dir/: .~lock.OMEGA_participants.tsv#  4RTNI_idaSearch_MRI_PET.csv  A4_idaSearch_MRI_PET.csv  ADNIDOD_idaSearch_MRI.csv  BLSA_idaSearch_ALL.csv  ICBM_all.csv  MCSA_Data_Dictionary.csv  MCSA_all.csv  OMEGA_participants.tsv  WRAP_idaSearch_ALL.csv
csv_exploration/: ageility_exploration.ipynb  bids_exploration.ipynb  check_csv_content.ipynb  csv_modifier.py  icbm_exploration.ipynb  ida_study_csv_to_participants.ipynb  mcsa_exploration.ipynb  mcsa_exploration_2.ipynb  ppmi_exploration.ipynb
csv_exploration/ida_explo/: 4rtni_exploration.ipynb  a4_exploration.ipynb  adnidod_exploration.ipynb  blsa_exploration.ipynb  cibm_exploration_v2.ipynb  habs_exploration.ipynb  icbm_exploration.ipynb  (+7 more)
download_and_MRI_selection_scripts/: local_transfert_filter_HCP_YOUNG_2025_parallel.sh  transfert_filter_HCP_YOUNG_2025_parallel.sh
preprocessing/: oasis3_preprocessing.py  oasis3_subject_selection.py
quality_control/: basic_stats copy.ipynb  basic_stats.ipynb  docker_mriqc.sh  qc.py  qc_t1w_fast.sh  simple_qc.ipynb  simple_qc.py  test_qc.sh
