[project]
name = "mri-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antspyx>=0.6.1",
    "itk>=5.4.5",
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
